docs(aio-dispatch): Result 3 SIGSEGV root-caused + fixed; second race found, left OPEN
5.8 follow-up #4: full writeup of the cratonvm-aio-dispatch-N
java_thread_obj staleness bug fixed in b3db96f8 (root cause, live
CRATONVM_DBG_STALE_OBJREF repro, fix rationale, 80-run stress
verification with zero recurrence), plus a second, independent,
pre-existing race in get_or_create_main_thread_group()/
build_thread_field_holder() discovered while stress-hunting the first
bug (confirmed present in the stock pre-session binary too) -- left
OPEN for a dedicated future session.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>